# istio-day-2023

./: CONTRIBUTING.md  LICENSE.md  README.md
envoy-filters/: grpc-transcoder.yaml  header_routing.yaml  wss_close.yaml
envoy_filters/: BUILD.bazel  grpc_context_jwt_decode.yaml  keep_alive.yaml
istio_config/: authn.yaml  authz.yaml  graceful_termination.yaml  istiod_metric_opt.yaml
