load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@golink//proto:proto.bzl", "go_proto_link")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//:proto_descriptor.bzl", "proto_descriptor")

# gazelle:resolve proto proto protoc-gen-openapiv2/options/annotations.proto @com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:options_proto
proto_library(
    name = "proto_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:options_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

proto_descriptor(
    name = "proto_descriptor",
    out = "api.pb",
    proto_library = ":proto_proto",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "shared_config",
    srcs = [":proto_descriptor"],
    package_dir = "shared-configs",
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

# gazelle:resolve proto go protoc-gen-openapiv2/options/annotations.proto @com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:options_go_proto
go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/org/repo/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:options_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "proto",
    embed = [":proto_go_proto"],
    importpath = "github.com/org/repo/proto",
    visibility = ["//visibility:public"],
)

go_proto_link(
    name = "proto_go_proto_link",
    dep = ":proto_go_proto",
    version = "v1",
)
